fix: add a gap to separate icon from the text

--- a/src/components/MortgagesPageMain/MortgagesPageMain.module.scss
+++ b/src/components/MortgagesPageMain/MortgagesPageMain.module.scss
@@ -97,6 +97,7 @@
   grid-template-areas:
     "icon header"
     "icon text";
+  gap: 0 1rem;
   margin: 2rem;
   line-height: 40px;
   align-self: stretch;
